--- a/src/app/components/dash/dash.component.html
+++ b/src/app/components/dash/dash.component.html
@@ -7,23 +7,7 @@
           <mat-card-title class> Purchases </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content border-top">
-          <div>
-            <div class="title">Fibre</div>
-            <div class="my-16">
-              Total orders:
-              <span class="font-weight-bold font-size-20">100</span>
-            </div>
-          </div>
-          <canvas
-            baseChart
-            [type]="'doughnut'"
-            [datasets]="fibreChartDatasets"
-            [labels]="fibreChartLabels"
-            [options]="fibreChartOptions"
-            [legend]="true"
-            (chartClick)="navigateToFibre($event)"
-          >
-          </canvas>
+          <div></div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
