--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.scss
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.scss
@@ -7,7 +7,7 @@
 }
 
 .form-container {
-  padding: 24px 32px 8px 32px;
+  padding: 32px 32px 16px 32px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 48px;
@@ -66,10 +66,6 @@ tr.row:not(.expanded-row) {
   border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-.border-bottom {
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
-}
-
 .mat-mdc-table-sticky {
   border-top: 1px solid #e0e0e0;
 }
@@ -79,9 +75,8 @@ tr.row:not(.expanded-row) {
   padding: 0 32px 0 32px;
 }
 
-mat-paginator,
 .mat-mdc-header-row {
-  background: whitesmoke;
+  background: rgb(225, 225, 225);
 }
 
 .table-container {
