--- a/src/app/components/purchases/fibre/fibre-purchase-order/order-details-dialog/order-details-dialog.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/order-details-dialog/order-details-dialog.component.html
@@ -1,60 +1,78 @@
 <h1 mat-dialog-title>Order details</h1>
 <form [formGroup]="form" class="form">
-    <div mat-dialog-content>
-        <div class="flex-container">
-            <mat-form-field appearance="fill">
-                <mat-label>Fibre</mat-label>
-                <mat-select formControlName="fibreTypeId">
-                    <ng-container *ngFor="let fibre of fibreService.fibres">
-                        <mat-option [value]="fibre.fibretypeId">{{ fibre.fibretype }}</mat-option>
-                    </ng-container>
-                </mat-select>
-                <mat-error>This field is required.</mat-error>
-              </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Shade Name</mat-label>
-                <input type="text" matInput formControlName="shadeName">
-                <mat-error>This field is required.</mat-error>
-            </mat-form-field>
+  <div mat-dialog-content>
+    <div class="flex-container">
+      <mat-form-field appearance="fill">
+        <mat-label>Fibre</mat-label>
+        <mat-select formControlName="fibreTypeId">
+          <ng-container *ngFor="let fibre of fibreService.fibres">
+            <mat-option [value]="fibre.fibreTypeId">{{
+              fibre.fibreType
+            }}</mat-option>
+          </ng-container>
+        </mat-select>
+        <mat-error>This field is required.</mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Shade Name</mat-label>
+        <input type="text" matInput formControlName="shade" />
+        <mat-error>This field is required.</mat-error>
+      </mat-form-field>
+    </div>
+    <div class="flex-container">
+      <mat-form-field appearance="fill">
+        <mat-label>KGs</mat-label>
+        <input type="number" min="1" matInput formControlName="weight" />
+        <mat-error>This field is required.</mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <span matPrefix>&nbsp;&#x20B9;&nbsp;</span>
+        <mat-label>Rate</mat-label>
+        <input
+          type="number"
+          min="0.00"
+          step=".01"
+          matInput
+          formControlName="rate"
+        />
+        <mat-error>This field is required.</mat-error>
+      </mat-form-field>
+    </div>
+    <div class="flex-container">
+      <div class="w-100">
+        <div class="pl-16">
+          <label for="amount" class="font-size-14 text-dark">Amount</label>
+          <div id="amount" class="text-gray">
+            {{ form.get("amount")?.value || 0 | currency : "INR" }}
+          </div>
         </div>
-        <div class="flex-container">
-            <mat-form-field appearance="fill">
-                <mat-label>KGs</mat-label>
-                <input type="number" min="1" matInput formControlName="weight">
-                <mat-error>This field is required.</mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <span matPrefix>&nbsp;&#x20B9;&nbsp;</span>
-                <mat-label>Rate</mat-label>
-                <input type="number" min="0.00" step=".01" matInput formControlName="rate">
-                <mat-error>This field is required.</mat-error>
-            </mat-form-field>
-        </div>
-        <div class="flex-container">
-            <mat-form-field appearance="fill">
-                <span matPrefix>&nbsp;&#x20B9;&nbsp;</span>
-                <mat-label>Amount</mat-label>
-                <input type="number" min="0.00" step=".01" matInput formControlName="amount">
-                <mat-error>This field is required.</mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>GST%</mat-label>
-                <input type="number" max="100" matInput formControlName="gstpercent">
-                <mat-error *ngIf="form.get('gst')?.hasError('required')">This field is required.</mat-error>
-                <mat-error *ngIf="form.get('gst')?.hasError('max')">Value should be between 1 and 100</mat-error>
-            </mat-form-field>
-        </div>
-        <div class="flex-container text-black">
-            <mat-form-field appearance="fill">
-                <span matPrefix>&nbsp;&#x20B9;&nbsp;</span>
-                <mat-label>Total Amount</mat-label>
-                <input type="number" matInput formControlName="totalAmount">
-            </mat-form-field>
-        </div>
-          
       </div>
-      <div mat-dialog-actions class="footer">
-        <button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
-        <button mat-button (click)="onCancel()">Cancel</button>
+      <mat-form-field appearance="fill" class="w-100">
+        <mat-label>GST%</mat-label>
+        <input type="number" max="100" matInput formControlName="gstPercent" />
+        <mat-error *ngIf="form.get('gst')?.hasError('required')"
+          >This field is required.</mat-error
+        >
+        <mat-error *ngIf="form.get('gst')?.hasError('max')"
+          >Value should be between 1 and 100</mat-error
+        >
+      </mat-form-field>
+    </div>
+    <div class="flex-container text-black">
+      <div class="w-100 pl-16">
+        <label for="total-amount" class="font-size-14 text-dark"
+          >Total Amount</label
+        >
+        <div id="total-amount" class="text-gray">
+          {{ form.get("totalAmount")?.value || 0 | currency : "INR" }}
+        </div>
       </div>
+    </div>
+  </div>
+  <div mat-dialog-actions class="footer">
+    <button mat-raised-button color="primary" (click)="onSubmit()">
+      Submit
+    </button>
+    <button mat-button (click)="onCancel()">Cancel</button>
+  </div>
 </form>
