--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -1,156 +1,235 @@
 <section class="container">
+  <div class="header-container">
     <h1 class="header">Receive Fibre Purchase Order</h1>
-    <mat-card class="party-card">
-      <mat-card-header>
-        <mat-card-title>Invoice details</mat-card-title>
-      </mat-card-header>
-        <mat-card-content>
-            <form class="form-container" [formGroup]="form">
-                <mat-form-field appearance="fill" class="w-20">
-                  <mat-label>PONo</mat-label>
-                  <input matInput formControlName="poNo">
-                </mat-form-field>
-              
-                <mat-form-field appearance="fill" class="w-40">
-                  <mat-label>Party</mat-label>
-                  <mat-select formControlName="party">
-                    <ng-container *ngFor="let party of partyService.parties">
-                      <mat-option [value]="party.partyId">{{ party.partyName }}</mat-option>
-                    </ng-container>
-                  </mat-select>
-                  <mat-error>This field is required.</mat-error>
-                </mat-form-field>
-    
-                <mat-form-field appearance="fill" class="w-20">
-                    <mat-label>Received Date</mat-label>
-                    <input matInput [matDatepicker]="poDatePicker" formControlName="poDate">
-                    <mat-hint>DD/MM/YYYY</mat-hint>
-                    <mat-datepicker-toggle matIconSuffix [for]="poDatePicker"></mat-datepicker-toggle>
-                    <mat-datepicker #poDatePicker></mat-datepicker>
-                    <mat-error>This field is required.</mat-error>
-                </mat-form-field>
+    <button mat-raised-button color="primary" (click)="choosePending()">
+      Choose from pending
+    </button>
+  </div>
+  <mat-card class="party-card">
+    <mat-card-header>
+      <mat-card-title>Receive PO details</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form class="form-container padding" [formGroup]="form">
+        <div class="min-w-25 pl-16">
+          <label for="poNo" class="font-weight-bold">PONo(s)</label>
+          <div id="poNo" class="font-size-16 text-gray pt-4">
+            {{ form.get("poNo")?.value ? form.get("poNo")?.value : "_" }}
+          </div>
+        </div>
 
-                <mat-form-field appearance="fill" class="w-25">
-                    <mat-label>Invoice No</mat-label>
-                    <input matInput formControlName="invoiceNo">
-                    <mat-error>This field is required.</mat-error>
-                  </mat-form-field>
+        <div class="min-w-25">
+          <label for="poNo" class="font-weight-bold">Party</label>
+          <div id="poNo" class="font-size-16 text-gray pt-4">
+            {{ form.get("partyId")?.value ? getPartyName() : "_" }}
+          </div>
+        </div>
 
-                <mat-form-field appearance="fill" class="w-20">
-                    <mat-label>Invoice Date</mat-label>
-                    <input matInput [matDatepicker]="invoiceDatePicker" formControlName="invoiceDate">
-                    <mat-hint>DD/MM/YYYY</mat-hint>
-                    <mat-datepicker-toggle matIconSuffix [for]="invoiceDatePicker"></mat-datepicker-toggle>
-                    <mat-datepicker #invoiceDatePicker></mat-datepicker>
-                    <mat-error>This field is required.</mat-error>
-                </mat-form-field>
-            </form>
-        </mat-card-content>
-      </mat-card>
-    
-      <div class="button-container">
-        <button mat-raised-button (click)="addData()" class="button">
-          <mat-icon>add_circle_outline</mat-icon>Add item
+        <div class="form-container w-100">
+          <mat-form-field appearance="fill" class="w-25">
+            <mat-label>Received Date</mat-label>
+            <input
+              matInput
+              [matDatepicker]="receivedDatePicker"
+              formControlName="recdDate"
+            />
+            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-datepicker-toggle
+              matIconSuffix
+              [for]="receivedDatePicker"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #receivedDatePicker></mat-datepicker>
+            <mat-error>This field is required.</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="w-25">
+            <mat-label>Received DCNo</mat-label>
+            <input matInput formControlName="recdDCNo" />
+            <mat-error>This field is required.</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="w-25">
+            <mat-label>DC Date</mat-label>
+            <input
+              matInput
+              [matDatepicker]="dcDatePicker"
+              formControlName="dcDate"
+            />
+            <mat-hint>DD/MM/YYYY</mat-hint>
+            <mat-datepicker-toggle
+              matIconSuffix
+              [for]="dcDatePicker"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #dcDatePicker></mat-datepicker>
+            <mat-error>This field is required.</mat-error>
+          </mat-form-field>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table">
+    <ng-container matColumnDef="poNo">
+      <th mat-header-cell *matHeaderCellDef>PONo</th>
+      <td mat-cell *matCellDef="let element">{{ element.poNo }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="fibreType">
+      <th mat-header-cell *matHeaderCellDef>Fibre</th>
+      <td mat-cell *matCellDef="let element">{{ element.fibreType }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="shade">
+      <th mat-header-cell *matHeaderCellDef>Shade</th>
+      <td mat-cell *matCellDef="let element">{{ element.shade }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="orderQty">
+      <th mat-header-cell *matHeaderCellDef class="text-right">Order Qty</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.orderQty }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="pendingQty">
+      <th mat-header-cell *matHeaderCellDef class="text-right">Pending Qty</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.pendingQty }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="receivedQty">
+      <th mat-header-cell *matHeaderCellDef class="text-right">Received Qty</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.receivedQty }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="receivedBales">
+      <th mat-header-cell *matHeaderCellDef class="text-right">
+        Received Bales
+      </th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.receivedBales }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="lot">
+      <th mat-header-cell *matHeaderCellDef class="text-right">Lot</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.lot }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="hsnCode">
+      <th mat-header-cell *matHeaderCellDef class="text-right">HSN Code</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.hsnCode }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="rate">
+      <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.rate | currency : "INR" }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="amount">
+      <th mat-header-cell *matHeaderCellDef class="text-right">Amount</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.amount || 0 | currency : "INR" }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef class="text-right">
+        {{ getAmount() | currency : "INR" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gstpercent">
+      <th mat-header-cell *matHeaderCellDef class="text-right">GST%</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.gstpercent | number : "1.2-2" }}%
+      </td>
+      <td mat-footer-cell *matFooterCellDef class="text-right">
+        {{ getTaxAmount() | currency : "INR" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="totalAmount">
+      <th mat-header-cell *matHeaderCellDef class="text-right">Total Amount</th>
+      <td mat-cell *matCellDef="let element" class="text-right">
+        {{ element.totalAmount || 0 | currency : "INR" }}
+      </td>
+      <td mat-footer-cell *matFooterCellDef class="text-right">
+        {{ getTotalAmount() | currency : "INR" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="button">
+      <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
+      <td mat-cell *matCellDef="let element" class="text-center">
+        <button
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Actions menu"
+        >
+          <mat-icon>more_vert</mat-icon>
         </button>
-      </div>
-      
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table">
-        <ng-container matColumnDef="fibreName">
-          <th mat-header-cell *matHeaderCellDef>Fibre</th>
-          <td mat-cell *matCellDef="let element">{{ element.fibreName }}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-  
-        <ng-container matColumnDef="hsnCode">
-          <th mat-header-cell *matHeaderCellDef class="text-right">HSN Code</th>
-          <td mat-cell *matCellDef="let element" class="text-right">{{ element.hsnCode }}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
+        <mat-menu #menu="matMenu">
+          <button
+            mat-menu-item
+            aria-label="button with a edit icon"
+            (click)="updateData(element)"
+          >
+            <mat-icon>edit</mat-icon> Edit
+          </button>
+          <button
+            mat-menu-item
+            (click)="removeData(element)"
+            aria-label="button with a delete icon"
+          >
+            <mat-icon>delete</mat-icon> Delete
+          </button>
+        </mat-menu>
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
 
-        <ng-container matColumnDef="orderQty">
-            <th mat-header-cell *matHeaderCellDef class="text-right">Order Qty</th>
-            <td mat-cell *matCellDef="let element" class="text-right">{{ element.orderQty }}</td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell no-rows" [attr.colspan]="displayedColumns.length">
+        No rows to display
+      </td>
+    </tr>
+    <tr
+      [hidden]="!dataSource.length"
+      mat-footer-row
+      *matFooterRowDef="displayedColumns; sticky: true"
+    ></tr>
+  </table>
 
-          <ng-container matColumnDef="pendingQty">
-            <th mat-header-cell *matHeaderCellDef class="text-right">Pending Qty</th>
-            <td mat-cell *matCellDef="let element" class="text-right">{{ element.pendingQty }}</td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-
-          <ng-container matColumnDef="receivedQty">
-            <th mat-header-cell *matHeaderCellDef class="text-right">Received Qty</th>
-            <td mat-cell *matCellDef="let element" class="text-right">{{ element.receivedQty }}</td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-
-          <ng-container matColumnDef="receivedBales">
-            <th mat-header-cell *matHeaderCellDef class="text-right">Received Bales</th>
-            <td mat-cell *matCellDef="let element" class="text-right">{{ element.receivedBales }}</td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-      
-        <ng-container matColumnDef="lot">
-          <th mat-header-cell *matHeaderCellDef class="text-right">Lot</th>
-          <td mat-cell *matCellDef="let element" class="text-right">{{ element.lot }}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-      
-        <ng-container matColumnDef="rate">
-          <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
-          <td mat-cell *matCellDef="let element" class="text-right">{{ element.rate | currency:'INR' }}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-      
-        <ng-container matColumnDef="amount">
-          <th mat-header-cell *matHeaderCellDef class="text-right">Amount</th>
-          <td mat-cell *matCellDef="let element" class="text-right">{{ element.amount | currency:'INR' }}</td>
-          <td mat-footer-cell *matFooterCellDef class="text-right">{{ getAmount() | currency: 'INR' }}</td>
-        </ng-container>
-  
-        <ng-container matColumnDef="gst">
-          <th mat-header-cell *matHeaderCellDef class="text-right">GST%</th>
-          <td mat-cell *matCellDef="let element" class="text-right">{{ element.gst | number: '1.2-2' }}%</td>
-          <td mat-footer-cell *matFooterCellDef class="text-right">{{ getTaxAmount() | currency: 'INR' }}</td>
-        </ng-container>
-  
-        <ng-container matColumnDef="totalAmount">
-          <th mat-header-cell *matHeaderCellDef class="text-right">Total Amount</th>
-          <td mat-cell *matCellDef="let element" class="text-right">{{ element.totalAmount | currency:'INR' }}</td>
-          <td mat-footer-cell *matFooterCellDef class="text-right">{{ getTotalAmount() | currency: 'INR' }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="button">
-          <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
-          <td mat-cell *matCellDef="let element" class="text-center">
-              <button mat-icon-button color="basic" aria-label="button with a edit icon"
-                  (click)="updateData(element)" matTooltip="Edit User">
-                  <mat-icon>edit</mat-icon>
-              </button>
-              <button mat-icon-button color="warn" (click)="removeData(element)"
-                  aria-label="button with a delete icon" matTooltip="Delete User">
-                  <mat-icon>delete</mat-icon>
-              </button>
-          </td>
-          <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell no-rows" [attr.colspan]="displayedColumns.length">
-            No rows to display
-          </td>
-        </tr>
-        <tr [hidden]="!dataSource.length" mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
-      </table>
-      
-      <div class="footer">
-        <button mat-raised-button (click)="goToSearch()"><mat-icon>arrow_back</mat-icon>Go to Search</button>
-        <div>
-            <button mat-raised-button class="mr-16" (click)="resetData()"><mat-icon>refresh</mat-icon>Reset</button>
-            <button mat-raised-button color="primary" (click)="submitOrder()"><mat-icon>save_alt</mat-icon>Submit</button>
-        </div>   
-      </div> 
-  </section>
+  <div class="footer">
+    <button mat-raised-button (click)="goToSearch()">
+      <mat-icon>arrow_back</mat-icon>Go to Search
+    </button>
+    <div>
+      <button mat-raised-button class="mr-16" (click)="resetData()">
+        <mat-icon>refresh</mat-icon>Reset
+      </button>
+      <button mat-raised-button color="primary" (click)="submitOrder()">
+        <mat-icon>save_alt</mat-icon>Submit
+      </button>
+    </div>
+  </div>
+</section>
