--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
@@ -21,7 +21,7 @@
           <mat-label>PO Status</mat-label>
           <mat-select formControlName="poStatus">
             <mat-option value="pending">Pending</mat-option>
-            <mat-option value="delivered">Delivered</mat-option>
+            <mat-option value="received">Received</mat-option>
           </mat-select>
         </mat-form-field>
 
@@ -101,7 +101,7 @@
         <td mat-cell *matCellDef="let element">
           <div
             class="status-chip"
-            [ngClass]="element.poStatus === 'Pending' ? 'pending' : 'delivered'"
+            [ngClass]="element.poStatus === 'Pending' ? 'pending' : 'received'"
           >
             {{ element.poStatus }}
           </div>
