--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -2,7 +2,7 @@
   <h1 class="header letter-spacing-1">Fibre New Purchase Order</h1>
   <mat-card class="party-card">
     <mat-card-header>
-      <mat-card-title>PO details</mat-card-title>
+      <mat-card-title>PO Details</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form class="form-container" [formGroup]="form">
