--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -7,7 +7,7 @@
   </div>
   <mat-card class="party-card">
     <mat-card-header>
-      <mat-card-title>Receive PO details</mat-card-title>
+      <mat-card-title>Receive Details</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form class="form-container padding" [formGroup]="form">
