--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
@@ -125,8 +125,8 @@
             "
           >
             <div class="pt-16 mb-16" *ngIf="element.poStatus === 'Pending'">
-              <button mat-raised-button (click)="addOrUpdateInvoice()">
-                <mat-icon>edit</mat-icon>Add or Update Invoice
+              <button mat-raised-button (click)="receivePO()">
+                <mat-icon>edit</mat-icon>Receive PO
               </button>
               <button mat-raised-button class="ml-16" (click)="updatePO()">
                 <mat-icon>edit</mat-icon>Update PO
