--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
@@ -17,9 +17,9 @@
   </div>
 
   <table mat-table [dataSource]="dataSource" class="border-bottom">
-    <ng-container matColumnDef="poNo">
-      <th mat-header-cell *matHeaderCellDef>PONo</th>
-      <td mat-cell *matCellDef="let element">{{ element.poNo }}</td>
+    <ng-container matColumnDef="space">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element"></td>
     </ng-container>
 
     <ng-container matColumnDef="fibreType">
