--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -62,7 +62,7 @@
     <ng-container matColumnDef="weight">
       <th mat-header-cell *matHeaderCellDef class="text-right">KGs</th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.weight }}
+        {{ element.weight | number : "1.0-3" }}
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
