--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -90,7 +90,7 @@
     <ng-container matColumnDef="orderQty">
       <th mat-header-cell *matHeaderCellDef class="text-right">Order Qty</th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.orderQty }}
+        {{ element.orderQty | number : "1.0-3" }}
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
@@ -98,7 +98,7 @@
     <ng-container matColumnDef="pendingQty">
       <th mat-header-cell *matHeaderCellDef class="text-right">Pending Qty</th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.pendingQty }}
+        {{ element.pendingQty | number : "1.0-3" }}
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
@@ -106,7 +106,7 @@
     <ng-container matColumnDef="receivedQty">
       <th mat-header-cell *matHeaderCellDef class="text-right">Received Qty</th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.receivedQty }}
+        {{ element.receivedQty | number : "1.0-3" }}
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
