--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
@@ -35,7 +35,7 @@
     <ng-container matColumnDef="orderQty">
       <th mat-header-cell *matHeaderCellDef class="text-right">Order Qty</th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.orderQty }}
+        {{ element.orderQty | number : "1.0-3" }}
       </td>
     </ng-container>
 
@@ -44,14 +44,14 @@
         Received Qty (so far)
       </th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.receivedQty }}
+        {{ element.receivedQty | number : "1.0-3" }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="balanceQty">
       <th mat-header-cell *matHeaderCellDef class="text-right">Pending Qty</th>
       <td mat-cell *matCellDef="let element" class="text-right">
-        {{ element.balanceQty }}
+        {{ element.balanceQty | number : "1.0-3" }}
       </td>
     </ng-container>
 
