--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
@@ -22,12 +22,13 @@
           <mat-select formControlName="poStatus">
             <mat-option value="pending">Pending</mat-option>
             <mat-option value="received">Received</mat-option>
+            <mat-option value="cancelled">Cancelled</mat-option>
           </mat-select>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
           <mat-label>PO date range</mat-label>
-          <mat-date-range-input [rangePicker]="picker">
+          <mat-date-range-input [rangePicker]="picker" [min]="minDate">
             <input
               matStartDate
               formControlName="poStartDate"
@@ -99,10 +100,7 @@
       <ng-container matColumnDef="poStatus">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>POStatus</th>
         <td mat-cell *matCellDef="let element">
-          <div
-            class="status-chip"
-            [ngClass]="element.poStatus === 'Pending' ? 'pending' : 'received'"
-          >
+          <div class="status-chip" [ngClass]="element.poStatus.toLowerCase()">
             {{ element.poStatus }}
           </div>
         </td>
