--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
@@ -138,9 +138,17 @@
                 class="inner-table"
               >
                 <ng-container matColumnDef="receivedDc">
-                  <th mat-header-cell *matHeaderCellDef>Received DC</th>
+                  <th mat-header-cell *matHeaderCellDef>Received DCNo</th>
                   <td mat-cell *matCellDef="let invoice">
                     {{ invoice.receivedDc }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="receivedDate">
+                  <th mat-header-cell *matHeaderCellDef>Received Date</th>
+                  <td mat-cell *matCellDef="let invoice">
+                    {{ invoice.receivedDate }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
@@ -161,16 +169,24 @@
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
 
-                <ng-container matColumnDef="kgs">
+                <ng-container matColumnDef="orderQty">
                   <th mat-header-cell *matHeaderCellDef class="text-right">
-                    Kgs
+                    Order Qty
                   </th>
                   <td mat-cell *matCellDef="let invoice" class="text-right">
-                    {{ invoice.kgs }}
+                    {{ invoice.orderQty }}
                   </td>
-                  <td mat-footer-cell *matFooterCellDef class="text-right">
-                    {{ getTotal(element.invoices, "kgs") }}
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="receivedQty">
+                  <th mat-header-cell *matHeaderCellDef class="text-right">
+                    Received Qty
+                  </th>
+                  <td mat-cell *matCellDef="let invoice" class="text-right">
+                    {{ invoice.receivedQty }}
                   </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
 
                 <ng-container matColumnDef="amount">
