--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
@@ -61,6 +61,7 @@
       </th>
       <td mat-cell *matCellDef="let row" class="text-center">
         <mat-checkbox
+          color="primary"
           (click)="$event.stopPropagation()"
           (change)="$event ? selection.toggle(row) : null"
           [checked]="selection.isSelected(row)"
